Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: hello-world-ingress
 annotations:
   kubernetes.io/ingress.class: nginx
   nginx.ingress.kubernetes.io/ssl-redirect: "false"
   nginx.ingress.kubernetes.io/use-regex: "true"
   nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
 rules:
 - http:
     paths:
     - path: /v1
       pathType: Prefix
       backend:
         service:
           name: aks-helloworld-one
           port:
             number: 80
